[package]
name = "test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde_json.workspace = true

cairo-lang-compiler = "=2.17.0-rc.3"
cairo-lang-filesystem = "=2.17.0-rc.3"
cairo-lang-lowering = "=2.17.0-rc.3"
cairo-lang-sierra = "=2.17.0-rc.3"
cairo-lang-starknet = "=2.17.0-rc.3"
cairo-lang-test-plugin = "=2.17.0-rc.3"
cairo-lang-test-runner = "=2.17.0-rc.3"
