[workspace]

[package]
name = "casm-data-flow"
version = "0.9.0-rc.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/starkware-libs/cairo_native"

[dependencies]
bincode = "2.0.1"
clap = { version = "4.5.23", features = ["derive"] }
serde_json = "1.0.128"
starknet-types-core = { version = "0.2.3", features = ["hash"] }
cairo-lang-casm = { version = "=2.17.0-rc.3", features = ["serde"] }
cairo-lang-utils = "=2.17.0-rc.3"
cairo-lang-runner = "=2.17.0-rc.3"
cairo-lang-starknet-classes = "=2.17.0-rc.3"
cairo-vm = "3.2.0"
num-bigint = "0.4.6"
